[package]
name = "rust_calculate"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = { version = "1.37.1", features = ["macros", "maths"] }
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.8"


[dev-dependencies]
chrono = "0.4.41"